# real-time-ml-3

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  historical.settings.env  live_settings.env  multistage.Dockerfile  naive.Dockerfile  onestage.Dockerfile  pyproject.toml  run.py
.git_backup/: COMMIT_EDITMSG
Cohort 3/: .gitignore
delete_.git_backup/: FETCH_HEAD  index  packed-refs
delete_.git_backup/logs/: HEAD
docker-compose/: Makefile  news-signal-live.yml  redpanda.yml  technical-indicators-historical.yml  technical-indicators-pipeline.yml
kraken_api/: base.py  mock.py  rest.py  trade.py  websocket.py
services/candles/: Dockerfile  Dockerfile copy  Makefile  config.py  live.settings.env  pyproject.toml  run.py  run_copied.py  settings.env
services/news/: Dockerfile  Makefile  README.md  (+8 more)
services/news-signal/: Dockerfile  Makefile  __Dockerfile  config.py  golden_dataset.py  historical.settings.env  live.settings.env  ollama.env  pyproject.toml  run.py  settings.env  test.py
services/news-signal/data/: golden_dataset_claude.jsonl  golden_dataset_ollama.jsonl
services/news-signal/llms/: base.py  claude.py  config.py  factory.py  ollama.py
services/to-feature-store/: Dockerfile  Dockerfile copy  Makefile  Makefile.back  README.md  config.py  hopsworks_credentials.env  live-settings.env  live.settings.env  live.settings.news-signal.env  pyproject.toml  requirements.in  run.py  settings.env  sinks.py  technical_indicators.csv
services/to-feature-store/to_feature_store.egg-info/: PKG-INFO  SOURCES.txt
services/trade_producer/: pyproject.toml
services/trades/: Dockerfile copy  Makefile  historical_settings.env  pyproject.toml  requirements.in  run.py  settings.env
services/trades/.git_backup/: ORIG_HEAD  config
services/trades/.git_backup/info/: refs
services/trades/.git_backup/objects/info/: commit-graph
services/trades/.git_backup/objects/pack/: pack-fa14eca16109c0d0e93306559b7268d307c15f39.idx  pack-fa14eca16109c0d0e93306559b7268d307c15f39.rev
services/trades/kraken_api/: rest.py  trade.py  websocket.py
sessions/: errors.md  runpod.md  session 3.md  session 8.md  status.md
trades.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+86 files in other folders)
