# services/to-feature-store/pyproject.toml
[project]
name = "to-feature-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hopsworks>=4.1.3",
    "loguru>=0.7.2",
    "pandas<2.1.0",  # Forzar una versión anterior de pandas
    "pyarrow>=18.1.0",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.4.0",
]