[tool.poetry]
name = "trade-producer"
version = "0.1.0"
description = ""
authors = ["hormigo <hormigo@gmail.com>"]
readme = "README.md"
packages = [{include = "trade_producer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
quixstreams = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
