[project]
name = "trades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.6",
    "quixstreams==3.3.0",
    "websocket-client>=1.8.0",
    "requests>=2.32.3",
]
